--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ git-config
 vim/backup
 vim/backup/*
 
+# ignore elc files
+*.elc
+
 # ignore 'backup' and 'auto-save-list' folders in emacs
 emacs.d/backup
 emacs.d/backup/*
