--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vim-solarized"]
+[submodule "vimsolarized"]
   path = vim/solarized
   url  = git://github.com/altercation/vim-colors-solarized.git
