--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
-[submodule "vimsolarized"]
+[submodule "vim-solarized"]
   path = vim/solarized
   url  = git://github.com/altercation/vim-colors-solarized.git
+[submodule "emacs-solarized"]
+  path = emacs.d/solarized
+  url  = git://github.com/sellout/emacs-color-theme-solarized.git
+[submodule "mutt-solarized"]
+  path = mutt/solarized
+  url  = git://github.com/altercation/mutt-colors-solarized.git
