Updated ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,17 @@
 git-config
 
 # ignore 'backup' folder in vim
-vim/backup
 vim/backup/*
+vim/.netrwhist
 
 # ignore elc files
 *.elc
 
 # ignore 'backup' and 'auto-save-list' folders in emacs
-emacs.d/backup
 emacs.d/backup/*
-emacs.d/auto-save/list
 emacs.d/auto-save-list/*
 emacs.d/url/*
+
+# mutt
+mutt/cache/*
+
